WMV frozen / skipped playback and Aspect Ratio issue with Solveig Splitter
Please see Forums thread http://forum.videolan.org/viewtopic.php?f=14&t=103882&p=351949#p351949 and sample wmv snippet at http://streams.videolan.org/incoming/Sample%20%28post-Solveig-split%29.wmv
"Lotesdelere" has examined the debug data and said: "This is weird and not normal. You should create a new ticket on the VLC Trac with the links to this thread and to your sample file."
OS Win 7 Home Prem SP1 VLC 2.0.3 AMD A8-5500 CPU with Radeon HD Graphics To reproduce: please see Forums post. The aspect ratio is always wrong; playback is always bad but minor symptoms vary just a bit.
Some wmv files provoke these defects; some do not. In particular, the freeze / skip playback happens AFAIK only for files created by Solveig MM Splitter (which is allegedly a lossless WMV splitter and combiner).