demux: asf: follow aspect ratio payload extension (fix #7433)